--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
   <html lang="es">
     <head>
       <meta charset="utf-8">
-      <title>GOOGLE COPIA</title>
+      <title>Google</title>
+      <link rel="icon" href="assets/img/icon.png">
+      <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
-
+      <script src="assets/javascript/scripts.js"></script>
     </body>
   </html>
