--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
       <link rel="stylesheet" href="assets/styles/styles.css">
     </head>
     <body>
+      <header>
+        <a id="title" style="text-decoration:none;" href="https://accounts.google.com/signin/v2/sl/pwd?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F%3Ftab%3Dwm&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><font color="#17202A">Gmail</font></a>
+        <a id="title" style="text-decoration:none;" href="https://www.google.com.mx/imghp?hl=es&tab=wi"><font color="#17202A">Imágenes</font></a>
+        <p id="puntos"><img id="puntos" src="assets/img/puntos.png" alt="puntos"></p>
+        <button id="login"><a style="text-decoration:none;" href="https://accounts.google.com/signin/v2/sl/pwd?hl=es&passive=true&continue=https%3A%2F%2Fwww.google.com.mx%2F%3Fgfe_rd%3Dcr%26dcr%3D0%26ei%3DTxuWWquIH86B6AGh7KawAg&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><font color="#FDFEFE">Iniciar sesión</font></a></button>
+      </header>
+      <section>
+        <h2><img id="gimg"src="assets/img/google.png" alt="logogoogle"></h2>
+        <h3>
+          <form class="form">
+            <div class="busc">
+              <input id="browser" type="text" name="search" value=""></br>
+            </div>
+            <input id="but" type="button" name="search" value="Buscar con Google">
+            <input id="but" type="button" name="search" value="Me siento con suerte">
+          </form>
+        </h3>
+      </section>
+      <footer>
+        <h4>México</h4>
+        <h5>
+          <p><a href="https://www.google.com.mx/intl/es-419_mx/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></p>
+          <p><a href="https://www.google.com.mx/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Negocios</a></p>
+          <p><a href="https://www.google.com.mx/intl/es-419_mx/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">Acerca de</a></p>
+        </h5>
+        <h6>
+          <p><a href="https://www.google.com.mx/intl/es-419_mx/policies/privacy/?fg=1">Privacidad<a></p>
+          <p><a href="https://www.google.com.mx/intl/es-419_mx/policies/terms/regional.html">Condiciones</a></p>
+          <p><a href="">Preferencias</a></p>
+          <p id="last"><a href="https://www.google.com/?gfe_rd=cr&dcr=0&ei=e26XWtfqBcihpAa6lJTIDw&gws_rd=cr&fg=1">Utilizar Google.com</a></p>
+        </h6>
+
+      </footer>
+
+
+
+
+
+
+
+
+
+
+
       <script src="assets/javascript/scripts.js"></script>
     </body>
   </html>
