--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <h3>
           <form class="form">
             <div class="busc">
-              <input id="browser" type="text" name="search" value=""></br>
+              <input id="browser" type="text" name="search" value="">
+              <img id="micro" src="assets/img/micro.png">
             </div>
-            <input id="but" type="button" name="search" value="Buscar con Google">
-            <input id="but" type="button" name="search" value="Me siento con suerte">
+              <input id="but" type="button" name="" value="Buscar con Google" onclick="searchinit(this.form)">
+            <input id="but" type="button" name="" value="Me siento con suerte">
           </form>
         </h3>
       </section>
